@@ -65,7 +65,7 @@ public class Haku {
     if (dto.hakuajat != null && !dto.hakuajat.isEmpty()) {
       OptionalInt tuorein =
           dto.hakuajat.stream()
-              .map(kh -> List.of(kh.alkaa, kh.paattyy))
+              .map(kh -> Arrays.asList(kh.alkaa, kh.paattyy))
               .flatMap(Collection::stream)
               .filter(Objects::nonNull)
               .map(aikaleima -> DateTime.parse(aikaleima, fmt).getYear())
